main.scss: changed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
 $color_default:       #fff;
 $color_lightest:      #f7fafa;
 $color_lighter:       #f0f5f6;
-$color_light:         #d9dfe0;
+$color_light:         #EC5E5E;
 $color_medium:        #6b797a;
 $color_dark:          #384647;
 $color_darker:        #273132;
