--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,9 @@
 // Default palette
 $color_default:       #fff;
 $color_lightest:      #f7fafa;
-$color_lighter:       #f0f5f6;
+$color_lighter:       #EC5E5E;
 $color_light:         #d9dfe0;
-$color_medium:        #EC5E5E;
+$color_medium:        #6b797a;
 $color_dark:          #384647;
 $color_darker:        #273132;
 $color_active:        #88dd9b;
