--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 // Default palette
 $color_default:       #fff;
 $color_lightest:      #f7fafa;
-$color_lighter:       #EC5E5E;
+$color_lighter:       #f0f5f6;
 $color_light:         #d9dfe0;
 $color_medium:        #6b797a;
 $color_dark:          #384647;
